src/test/deca/context/invalid/new-int.deca
// Description:
//    Utilisation de new pour créer un int
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 10 : New is only for classes
//

{
    new int();
}
